@@ -1,3 +1,11 @@
+20140310:
+- added memory advise for buffer memory
+- compatibility fix for Solars st driver
+- prevent buffer overflow attack via defaults file
+- ignore defaults file from other users
+- updated documentation for use with cron
+- minor bugfixes
+
 20140126:
 - new feature: set option defaults in ~/.mbuffer.rc
 - enhancement: write status to the log file
